# tensorflow_ruy

./: CMakeLists.txt  allocator_test.cc  benchmark.cc  block_map.cc  common.h  context_test.cc  dispatch.h  environment_var.sh  im2col.h  kernel_arm.h  kernel_arm32.cc  kernel_arm64.cc  kernel_avx2.cc  kernel_avx512.cc  kernel_common.h  pack_arm.cc  pack_arm.h  pack_avx2.cc  pack_avx512.cc  pack_common.h  pack_x86.h  platform.h  prepack.h  prepacked_cache.cc  prepacked_cache_test.cc  size_util_test.cc  test.h  trmul.cc  tune_test.cc
